--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "\"# gulp-learn\"",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "gulp": "gulp",
+    "tasks": "gulp --tasks"
   },
   "repository": {
     "type": "git",
